Grease Pencil: sculpt brush is not synchronized properly #57525

Closed
opened 2018-10-31 00:04:55 +01:00 by Campbell Barton · 3 comments

Note: original text by @antoniov

When enable sculpt mode in grease pencil, the toolbar shows a group of buttons that run a operator. The problem is the brush is not changed until the user press on the view-port. This is logic because the invoke event is not called.

The first consideration is that sculpt brushes are not real brushes, it’s only a UI representation of operator with different parameters, so we cannot use the “general” brush solution.

*Note: original text by @antoniov* When enable sculpt mode in grease pencil, the toolbar shows a group of buttons that run a operator. The problem is the brush is not changed until the user press on the view-port. This is logic because the invoke event is not called. The first consideration is that sculpt brushes are not real brushes, it’s only a UI representation of operator with different parameters, so we cannot use the “general” brush solution.
Campbell Barton self-assigned this 2018-10-31 00:04:55 +01:00
Author
Owner

Added subscribers: @ideasman42, @antoniov

Added subscribers: @ideasman42, @antoniov
Campbell Barton changed title from Sculpt Brush is not synchronized properly to Grease pencil sculpt brush is not synchronized properly 2018-10-31 00:05:44 +01:00
Campbell Barton changed title from Grease pencil sculpt brush is not synchronized properly to Grease Pencil: sculpt brush is not synchronized properly 2018-10-31 00:10:46 +01:00

This issue was referenced by b657e9875c

This issue was referenced by b657e9875cefa3b5e05964f023ad843fe7e24ebb
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57525
No description provided.