Tool System: use enum for gp sculpt/weight paint

Fixes T57525